tek3/bernstein/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        name: redis
    spec:
      restartPolicy: Always
      containers:
        - name: redis
          image: redis:5.0
          ports:
            - containerPort: 6379
