tek3/bernstein/redis.service.yaml
apiVersion: apps/V1
kind: Service
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  restartPolicy: Always
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
