tek3/bernstein/result.service.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
