tek3/bernstein/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: poll
      http:
        paths:
          - path: /pollpath
            backend:
              service:
                name: poll
                port:
                  number: 80
